Added grid cells to grid

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <h1 class="center">Etch-A-Sketch</h1>
+        <header class="center">
+            <h1>Etch-A-Sketch</h1>
         </header>
 
-        <div class="instructions">
-            <h2 class="center">Pick a color</h2>
+        <div class="instructions center" >
+            <h2>Pick a color</h2>
             <div class="color-container">
 
             </div>
         </div>
 
-        <div class="container">
+        <div class="grid">
             
         </div>
+        
 
         <script src="script.js"></script>
     </body>
