--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
             </div>
         </div>
 
-        <div class="grid">
-            
-        </div>
-        
+        <div class="grid"></div>
 
         <script src="script.js"></script>
     </body>
