Added option to choose more colors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
         <div class="grid"></div>
 
+        <div class="reset">
+            <h2 class="center">Choose a color, then click cells to draw</h2>
+            <h2 class="center">Click here to reset</h2>
+        </div>
+
         <script src="script.js"></script>
     </body>
 </html>
