Adds reset button that will clear entire grid

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
         <div class="grid"></div>
 
+        
         <div class="reset">
             <h2 class="center">Choose a color, then click cells to draw</h2>
-            <h2 class="center">Click here to reset</h2>
+            <h2 id="reset-button" class="center">Click here to reset</h2>
         </div>
 
         <script src="script.js"></script>
